Fix bug on Safari + Hero on Mobile

--- a/css/app.css
+++ b/css/app.css
@@ -4255,15 +4255,19 @@ section#hello {
   background-image: -webkit-linear-gradient(110deg, #00d2ff 0%, #4490fa 58%, #2365fb 100%);
   background-image: -ms-linear-gradient(110deg, #00d2ff 0%, #4490fa 58%, #2365fb 100%);
   background-image: linear-gradient(110deg, #00d2ff 0%, #4490fa 58%, #2365fb 100%);
-  height: 700px;
   padding-top: 9em;
+  padding-bottom: 5em;
   margin-bottom: 3em;
   margin-top: -3.58em; }
+  @media print, screen and (min-width: 40em) {
+    section#hello {
+      height: 700px;
+      padding-bottom: 0; } }
   @media screen and (max-width: 39.9375em) {
     section#hello {
       margin-top: -8.5em; } }
   section#hello .title-container {
-    padding-top: 5em; }
+    padding-top: 1em; }
     @media print, screen and (min-width: 40em) {
       section#hello .title-container {
         padding-top: 0; } }
@@ -4276,6 +4280,9 @@ section#hello {
       color: #2567FB; }
       section#hello .title-container a.button i {
         color: #00d2ff; }
+  @media screen and (max-width: 39.9375em) {
+    section#hello #ctahero img {
+      max-width: 60%; } }
   section#hello .image {
     position: absolute;
     background-image: url(../img/hero-schema.svg);
